basic auth + generating tokens
